--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 <head>
 <title>My Web Page
 </title>
-</head>
+  <style type="text/css">
+    h1{
+color:red;
+font-size:24pt;
+      text-decoration:underline;
+      font-family: tahoma , helvatica, sans-serif;
+      }
+    em{
+fonst-style:normal;
+      color:green;
+     background-color:lightgrey;
+      font-weight:bold;
+      }
+    </style>
+    </head>
 <body><strong>Introduction to Information Systems</strong>
 <p>
 <em>Can Günyel
