--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <meta charset="utf-8"><html>
 <head>
 <title>My Web Page
+  link rel="stylesheet, type="text/css" href="./all.css" />
 </title>
-  <style type="text/css">
+  <!-- 
+style type="text/css">
     h1{
 color:red;
 font-size:24pt;
@@ -16,7 +18,8 @@ fonst-style:normal;
      background-color:lightgrey;
       font-weight:bold;
       }
-    </style>
+    </style
+-->
     </head>
 <body><strong>Introduction to Information Systems</strong>
 <p>
