--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <meta charset="utf-8"><html>
 <head>
 <title>My Web Page
-  link rel="stylesheet, type="text/css" href="./all.css" />
-</title>
+  <link rel="stylesheet, type="text/css" href="./all.css" />
+/title>
   <!-- 
 style type="text/css">
     h1{
