--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8"><html>
 <head>
 <title>My Web Page
-  <link rel="stylesheet, type="text/css" href="./all.css" />
+  <link rel="stylesheet" type="text/css" href="./all.css" />
 /title>
   <!-- 
 style type="text/css">
