--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE=html>
 <meta charset="utf-8"><html>
 <head>
-  <link rel="stylesheet" type="text/css" href="all.css" />
+  <link rel="stylesheet" type="text/css" href="all.css"/>
 <title>My Web Page
   
-/title>
+</title>
   <!-- 
 style type="text/css">
     h1{
