--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE=html>
-<meta charset="utf-8"><html>
+<meta charset="utf-8">
+<html>
 <head>
-  <link rel="stylesheet" type="text/css" href="all.css"/>
+
 <title>My Web Page
   
 </title>
