--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE=html>
 <meta charset="utf-8">
-<html>
+<html> 
 <head>
 
-<title>My Web Page
-  
-</title>
+<title>My Web Page</title>
   <!-- 
 style type="text/css">
     h1{
