--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 <html> 
 <head>
+  <link rel="stylesheet" type="text/css" href="all.css"/>
 
 <title>My Web Page</title>
   <!-- 
