--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ fonst-style:normal;
 -->
     </head>
 <body><strong>Introduction to Information Systems</strong>
-<p>
+<p class="centered">
 <em>Can Günyel
 <br>
 150200049
